<resources>
    <string name="app_name">iFisio</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="remember_me">Recordarme</string>
    <string name="login">Log In</string>
    <string name="no_account_register">No tengo cuenta. Registrarse</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="identityNumber">DNI</string>
    <string name="have_account">Ya tengo cuenta. Entrar</string>
    <string name="register">Registro</string>
    <string name="password_repeat">Repetir contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="text_add_clinic">Agregar una clínica</string>
    <string name="text_connect_clinic">Conectarse a una clínica</string>
    <string name="edit_clinic_name">Nombre de la clinica</string>
    <string name="edit_direction">Dirección (opcional)</string>
    <string name="clinic_register">Registrar clínica</string>
    <string name="edit_description">Introduce una descripción (opcional)</string>
    <string name="edit_cif">CIF (Opcional)</string>
    <string name="enter_email">Introduce tu correo electrónico y te enviaremos una contraseña nueva</string>
    <string name="password_forgotten">¿Has olvidado tu contraseña?</string>
    <string name="text_send">Enviar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="clinic_password">Contraseña de la clínica</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="clinic_name">Nombre de la clinica</string>
    <string name="dont_find_clinic">No encuentras tu clínica?\nCrea la tuya aquí</string>
    <string name="patient_name">Nombre del paciente</string>
    <string name="patient_surname">Apellidos</string>
    <string name="patient_identity_number">DNI</string>
    <string name="patient_born_date">Fecha de nacimiento</string>
    <string name="patient_injury">Lesión</string>
    <string name="patient_treatment">Tratamiento</string>
    <string name="add_patient">Añadir paciente</string>
    <string name="history">Historial</string>
    <string name="fisiotherapy">Fisioterapia</string>
    <string name="psychology">Psicología</string>
    <string name="visit_reason">MOTIVO DE VISITA</string>
    <string name="exploration">EXPLORACIÓN</string>
    <string name="treatment">TRATAMIENTO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="settings">Configuración</string>
    <string name="add_profile_photo">Añadir foto de Perfil</string>
    <string name="permission_needed">Permisos necesarios</string>
    <string name="grant_permission">Para continuar es necesario que actives manualmente los permisos de almacenamiento.\nPermisos -> Almacenamiento</string>
    <string name="text_accept">Aceptar</string>
    <string name="regular_medication">Medicación Habitual:</string>
    <string name="medic_conditions">Afecciones Médicas:</string>
    <string name="regular_exercise">Ejercicio habitual:</string>
    <string name="surgical_operations">Operaciones quirúrgicas:</string>
    <string name="medic_examination">Reconocimientos médicos:</string>
    <string name="born_date">Fecha de nacimiento:</string>
    <string name="identity_number">DNI:</string>
    <string name="number_phone">Teléfono:</string>
    <string name="patient_email">Email:</string>
    <string name="profession">Profesión:</string>
    <string name="patient_full_name">Nombre del Paciente</string>
    <string name="patient_profession">Profesión</string>
    <string name="text_no_data">No hay datos para mostrar</string>
    <string name="no_clinic_added">No hay clinicas para mostrar</string>
</resources>
