<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".UI.clinics.CreateClinicActivity">

    <include layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_clinic_name"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/edit_clinic_name"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_clinic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/clinic_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:singleLine="true">

        <EditText
            android:id="@+id/edit_clinic_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_direction"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:singleLine="true">

        <EditText
            android:id="@+id/edit_clinic_identity_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_cif"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/edit_clinic_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:hint="@string/edit_description"
            android:imeOptions="actionDone"
            android:maxLines="4"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_clinic_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clinic_register" />
</LinearLayout>