<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".UI.login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="100">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_name"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:backgroundTint="@android:color/white"
                android:hint="@string/name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/RegisterTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_surname"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/surname"
                android:singleLine="true"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/RegisterTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_identity_number"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/identityNumber"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/RegisterTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_email"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/RegisterTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_phone"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/phone"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/RegisterTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_password"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/RegisterTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/edit_password_repeat"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password_repeat"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_corner">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/have_account"
            style="@style/RegisterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_account" />
    </LinearLayout>
</LinearLayout>