<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".UI.clinics.patients.AddPatient">

    <include layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_patient_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_surname"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_patient_identity_number"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/patient_identity_number"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp">

        <EditText
            android:id="@+id/edit_patient_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_age"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_add_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/add_patient" />
</LinearLayout>