<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".UI.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/gradient_background_round_border"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="32dp"
                android:src="@drawable/app_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/login_password"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/remember_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />

                <TextView
                    style="@style/LoginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_corner">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_no_account"
                style="@style/LoginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_forgot_pass"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>